--- a/ideal-jobs.html
+++ b/ideal-jobs.html
@@ -51,33 +51,173 @@
 
 								<article>
 									<header>
-										<h2>No Sidebar</h2>
-										<p>All content, all the time.</p>
+										<h2>Industry Data for Team's Ideal Jobs</h2>
 									</header>
 
 									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
+									<h3> 1.What are the Job Titles for your group's ideal jobs? How do each of these rank in terms of demand from employers?</h3>
 
-									<h3>And Yet Another Subheading</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-									vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-									Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-									rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-									Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-									Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+									<table style="width:100%">
+  <tr>
+	  <th>Team Member</th>
+	  <th>Ideal Job</th>
+    <th>Industry/Field</th>
+    <th>Required Skills</th>
+		<th>Current Skills</th>
+  </tr>
+	<br>
+  <tr>
+    <td>Nathan Askew</td>
+    <td>Senior Systems Engineer </td>
+    <td>Information technology </td>
+		<td>Identifying, installing, and implementing IT hardware & software. Providing IT support to employees. </td>
+    <td>All the above except providing IT support to employees. </td>
+  </tr>
+		<br>
+  <tr>
+    <td>Tom Marshman</td>
+    <td>Research Fellow in Machine Learning for Cyber Security </td>
+    <td>Information Technology  </td>
+		<td>PhD in computer science.
 
-									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+Ability to perform independent research in machine learning and security analytics.
+
+Expertise in deep learning, neural networks anomaly detection and clustering </td>
+    <td>None of the above.</td>
+  </tr>
+		<br>
+	<tr>
+		<td>Geoffrey Timothy</td>
+		<td>Entrepreneur/CEO of a company relating to IT world </td>
+		<td>Information Technology</td>
+		<td>Professional computing skills such as programming, designing UX and database skills.
+
+Professional management skills, able to lead a company and be a great leader to my employee. </td>
+		<td>None of the above. </td>
+	</tr>
+		<br>
+	<tr>
+		<td>Adair Grant</td>
+		<td>Front end developer</td>
+		<td>Information Technology</td>
+		<td>Programming skills in HTML, CSS, JavaScript. A knowledge of UX would also be useful as well as a familiarity with Shopify, WordPress and other web development platforms.
+		</td>
+		<td>Customer service, adaptability and communication </td>
+	</tr>
+		<br>
+	<tr>
+		<td>Dillon Foenander</td>
+		<td>Full Stack Developer </td>
+		<td>Information Technology</td>
+		<td>Programming Skills for front end and Back end Web Development HTML, CSS and JavaScript. PHP, Python C#.
+		</td>
+		<td>Front end coding skills and some server-side coding through using raspberry pi.
+
+Employee and staff communication. </td>
+	</tr>
+</table>
+
+									<h3>According to burning Glass Data our Ideal Jobs rank in demand as follows:</h3>
+	<ol>
+									<li>	Senior Systems Engineer – 786 Job Postings from data supplied </li>
+	<li>	Front End Developer -  738 Job Postings from Data Supplied</li>
+	<li>	Full Stack Developer – 344 Job Postings from Data supplied</li>
+	<li>	Research Fellow in Machine Learning for Cyber Security – No jobs found in data supplied, 65 Found on seek.
+	(https://www.seek.com.au/cyber-security-researcher-jobs-in-information-communication-technology)</li>
+	<li>	Enterpreneur/CEO Relating to IT world – 16 jobs found on seek. (https://www.seek.com.au/entrepreneur-jobs-in-information-communication-technology) </li>
+</ol>
+
+
+<h3> 2.From your group's ideal jobs, you can identify a set of skills required for these jobs (we will refer to this as your group's required skill set). These can be divided into general skills (communication, problem solving, writing etc) and IT-specific skills (Javascript, SQL, etc).
+</h3>
+
+<p> <strong>Groups Required Skill set</strong>: Implementing IT hardware/Software, Providing IT support, Deep Learning Neural Network anomaly detection and clustering skills, Computing Skills ( General OS use) , User Experience (UX) , SQL/Database, HTML, CSS, JavaScript, PHP, Python, C++.
+</p>
+
+<h4>How do the IT - specific skills in your required skill set rank in terms of demand from employers?</h4>
+<ol>
+	<li>SQL – 3,570 Job Postings</li>
+<li>JavaScript – 2,946 Job Posts</li>
+	<li>JAVA - 2,860 Job Posts</li>
+	<li>Microsoft C# - 1,643 Job Posts</li>
+	<li>Computing Skills (Microsoft Windows) – 2,699 Job Post</li>
+	<li>Computing Skills (Microsoft Office) – 1,341 Job Posts</li>
+	<li>Python – 1150 Job Posts</li>
+	<li>HTML5 – 1.005 Job Posts</li>
+	<li>Hypertext Preprocessor (PHP) – 830 Job Posts</li>
+	<li>C++ - 692 Job Posts</li>
+	<li>CSS – 625 Job Posts</li>
+	<li>User Experience Design – 417 Job Posts</li>
+</ol>
+
+<h4>How do the general skills in your required skill set rank in terms of demand from employers?</h4>
+General Skill Set: Customer Service, Adaptability, communication, Providing Support to staff/customers ( Team work )
+
+<ol>
+
+	<li>Communication – 44, 367 Job Posts</li>
+	<li>Problem Solving Skills – 16,445 Job Posts</li>
+	<li>Organisational Skills – 15,844 Job Posts</li>
+	<li>Team work / Collaboration – 14,364 Job Posts</li>
+	<li>Service Improvement – 722 Job Posts</li>
+</ol>
+
+	<h4>What are the three highest ranked IT-specific skills which are not in your required skill set?</h4>
+<ol>
+
+	<li>SAP - 2,189 Job Posts</li>
+	<li>LINUX – 1,632 Job Posts</li>
+	<li>.NET Programming – 1,370 Job Posts</li>
+</ol>
+<h4>What are the three highest ranked general skills which are not in your required skill set?</h4>
+<ol>
+
+	<li>Writing - 15,590 Job Posts</li>
+	<li>Troubleshooting – 11,471 Job Posts</li>
+	<li>Planning - 11,315 Job Posts</li>
+
+</ol>
+
+<h3>3.Having looked at the Burning Glass data, has your opinion of your ideal job changed? Why or why not?</h3>
+
+<p>
+<ul>
+
+<li><strong> Dillon:</strong>
+   My opinion on my ideal job has not changed after looked at the burning glass data as there are plenty of job postings for the job, which means competition but high frequency so ascertaining a my job should be easy enough to apply for many and at least land one that is idea for me and my skill set.
+</li>
+<li>
+Nathan:
+
+My opinion of my ideal job has not changed after reviewing this data, if anything my opinion has greatened as I have seen just how much demand there is for people in this field. This will hopefully mean that when I graduate at the end of this year, I will be able to move into a role that can either lead to my ideal job or a job that has similar task as my ideal job. This way I can start gaining experience so that one day I can move into my ideal job with confidence that I have the skills necessary to perform it well.
+</li>
+
+<li>
+<strong>Thomas:  </strong>
+
+My ideal job was Research fellow in machine learning for cyber security.
+
+My opinion of my ideal job has changed.  With skills in the greatest demand, communication skills are by far the most required, by a long shot.  I always thought of an IT job as a nerdy code monkey.  Someone who huddled in front of a computer and, gets “in the zone” and codes all day.  According to burning glass this stereotype is wrong.  Anyone in the IT industry must have highly polished communication skills.  Professionals must have the ability to communicate with clients, colleagues managers and other team members.  Problem solving skills, organisational, writing and teamwork skills are pretty self-evident.  It is pretty obvious that an IT professional would require these skills.
+
+Skills in the greatest demand are: SQL, JavaScript, Java MS Window, project management and SAP
+
+The requirements for research fellow in machine learning for cyber security are- deep representation learning and other deep learning methods, graph neural networks, anomaly detection and clustering (especially for graphs), attention-based neural networks.  These are pretty specialised and obscure skills to have.  I am pretty sure the language of artificial intelligence is python, which I way down the list of skills in greatest demand.  The job would probably require SQL skills as well as skills in java and java script.
+
+Job titles in demand are the sort of jobs that are similar to fellow in machine learning for cyber security.  Solutions architect net developer and systems engineer have a lot in similarity with my ideal job.  This means that if work as a researcher in machine learning didn’t work out, there would be plenty of similar jobs that would be in demand.
+ </li>
+<li>
+<strong>Adair:  </strong>
+
+My opinion has not been changed by the burning glass data. There is a large requirement for front-end developers, and it was the second most required profession of those within my group. I think this gives me a greater chance of obtaining a job that suits my requirements and skill level.
+</li>
+<li>
+<strong>Geoffrey:  </strong>
+
+By looking at the Burning Glass Data result, my Ideal Job might be the least wanted among others. However, being an entrepreneur is never easy at the beginning, but it will always worth the effort in the end. I’m not changing my Ideal Job because I always dream to be an entrepreneur. It is relaxing when I’m wondering about a company of mine is operating smoothly in the future and I have a steady income because of it.
+</li>
+</p>
+
 								</article>
 
 						</div>
