--- a/team-profile.html
+++ b/team-profile.html
@@ -51,33 +51,79 @@
 
 								<article>
 									<header>
-										<h2>No Sidebar</h2>
-										<p>All content, all the time.</p>
+										<h2>Meet Our Team</h2>
 									</header>
 
-									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+									<div class="row">
+						  <div class="column">
+						    <div class="card">
+						      <img src="images/nathan.jpg" alt="Nathan Askew" style="width:100%">
+						      <div class="container">
+						        <h2>Nathan Askew</h2>
+						        <p class="title">Nice Guy</p>
+						        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+						        <p>example@example.com</p>
+						        <p><button class="button">Contact</button></p>
+						      </div>
+						    </div>
+						  </div>
 
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
+						  <div class="column">
+						    <div class="card">
+						      <img src="images/Dillon.jpg" alt="Dillon Foenander" style="width:100%">
+						      <div class="container">
+						        <h2>Dillon Foenander</h2>
+						        <p class="title">Art Director</p>
+						        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+						        <p>example@example.com</p>
+						        <p><button class="button">Contact</button></p>
+						      </div>
+						    </div>
+						  </div>
 
-									<h3>And Yet Another Subheading</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-									vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-									Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-									rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-									Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-									Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+						  <div class="column">
+						    <div class="card">
+						      <img src="images/Tom.jpg" alt="Tom Marshman" style="width:100%">
+						      <div class="container">
+						        <h2>Tom Marshman</h2>
+						        <p class="title">Designer</p>
+						        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+						        <p>example@example.com</p>
+						        <p><button class="button">Contact</button></p>
+						      </div>
+						    </div>
+						  </div>
+						</div>
 
-									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+						<div class="column">
+							<div class="card">
+								<img src="images/Adair.png" alt="Adair Grant" style="width:100%">
+								<div class="container">
+									<h2>Adair Grant</h2>
+									<p class="title">Designer</p>
+									<p>Some text that describes me lorem ipsum ipsum lorem.</p>
+									<p>example@example.com</p>
+									<p><button class="button">Contact</button></p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="column">
+						<div class="card">
+							<img src="images/Geoffrey.png" alt="Geoffrey Timothy" style="width:100%">
+							<div class="container">
+								<h2>Geoffrey Timothy</h2>
+								<p class="title">Designer</p>
+								<p>Some text that describes me lorem ipsum ipsum lorem.</p>
+								<p>example@example.com</p>
+								<p><button class="button">Contact</button></p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
 								</article>
 
 						</div>
