--- a/team-profile.html
+++ b/team-profile.html
@@ -60,8 +60,8 @@
 						<div class="row gtr-200">
 							<section class="col-6 col-12-narrower">
 								<div class="box highlight">
-									<h3><a href="it-work.html">Nathan Askew - S3720643</a></h3>
-									<a href="#" class="image left"><img src="images/nathan.jpg" alt="" /></a>
+									<h3>Nathan Askew - S3720643</h3>
+									<img src="images/nathan.jpg" alt="nathan" style="width:300px;height:300px;">
 									<br></br>
 									<br></br>
 									<br></br>
