--- a/index.html
+++ b/index.html
@@ -79,14 +79,21 @@
 			<section class="wrapper style1">
 					<div class="container">
 						<div class="row gtr-200">
-							<section class="col-6 col-12-narrower">
+							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<a href="#" class="image left"><img src="images/Icon5.jpg" alt="" /></a>
 									<h3><a href="it-work.html">IT Work</a></h3>
 									<p>Our research into the IT industry and an interview of one of the many people in this industry.</p>
 								</div>
 							</section>
-							<section class="col-6 col-12-narrower">
+							<section class="col-4 col-12-narrower">
+								<div class="box highlight">
+									<a href="#" class="image left"><img src="images/Icon4.jpg" alt="" /></a>
+									<h3><a href="ideal-jobs.html">IT Project</a></h3>
+									<p>Our group IT Project that we have been developing as a business idea for this assignment.</p>
+								</div>
+							</section>
+							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<a href="#" class="image left"><img src="images/Icon6.jpg" alt="" /></a>
 									<h3><a href="group-reflection.html">Group Reflection</a></h3>
