--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<a href="#" class="image left"><img src="images/Icon4.jpg" alt="" /></a>
-									<h3><a href="ideal-jobs.html">IT Project</a></h3>
+									<h3><a href="it-project.html">IT Project</a></h3>
 									<p>Our group IT Project that we have been developing as a business idea for this assignment.</p>
 								</div>
 							</section>
