--- a/it-project.html
+++ b/it-project.html
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">IT Project</a></h1>
+						<h1><a href="index.html" id="logo">IT Project<em>Choice Charities</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -53,9 +53,13 @@
 
 										<section>
 											<h3>Introduction</h3>
-											<p>	We all do know that to achieve goals there are sweats and tears behind them. 
-												As well as a technology, it needs tools and some technology in order to make it happen.
-												Tools and Technologies are more like the back-end of this Charity App.
+											<p>	Our project is to develop a website that will enable users to find a wide variety of charity works, 
+												conservation efforts, community projects or other crowd funded projects across Australia. 
+												These charities and projects will be displayed on our site after they have been identified 
+												as an honest and impactful charity through an analysis conducted by our team. By doing this, 
+												people can open our site, browse across a country map, view a wide variety of charity works, 
+												knowing that all these charities are going to put their donations to good use and be used for 
+												the purpose that they have detailed. 
 											</p>
 											<footer>
 											</footer>
@@ -70,9 +74,6 @@
 												<li><a href="https://bootstrap4.com/">Bootstrap</a></li>
 												<li><a href="https://notepad-plus-plus.org/downloads/">Notepad++</a></li>
 											</ul>
-											<footer>
-												<a href="https://team-indecisive.github.io/The_IT_World/index.html" class="button">Homepage</a>
-											</footer>
 										</section>
 
 								</div>
@@ -84,8 +85,8 @@
 
 										<article>
 											<header>
-												<h2>Tools and Technologies</h2>
-												<p>Things and Services we use to construct the Website</p>
+												<h2>Choice Charities</h2>
+												<p>An honest charity choser</p>
 											</header>
 
 											<span class="image featured"><img src="images/tools.jpg" alt="" /></span>
