--- a/it-project.html
+++ b/it-project.html
@@ -64,7 +64,11 @@
 											<footer>
 											</footer>
 										</section>
+<section>
+	<h3>Motivation : </h3>
+<p>This application will be useful as there are many people that help in a charitable way but want to know that their money is going to the right place and will help those that really need the assistance. There is also currently a huge amount of distrust with charities across Australia. This is partially due to several large charities taking in millions of dollars of donations for the 2019/2020 summer bushfires relief and large portions of these donations were not being sent to though that needed immediate help. In fact, the Australian Red-cross director Noel Clements admitted that of the $115million donated by Australians and internationally at least $11million would be used for ‘administration costs’, and in May the red cross had only distributed  40% of the money they had received with the Salvation Army having only passed on  $19 million of the $41 million raised. This is one of the reasons that this website will help. It will give donors an accurate indication of where their money is really going. Although there are similar websites already established what we aim to provide a more user-friendly approach whereby we can present the information to users in an easy to absorb manner. We think that if people want to donate their hard-earned money it should be easy for them to find and process what they need to make an informed choice. </p>
 
+	</section>
 										<section>
 											<h3>Links to tools</h3>
 											<ul class="links">
