--- a/natural-language-processing-and-chatterbots.html
+++ b/natural-language-processing-and-chatterbots.html
@@ -7,7 +7,6 @@
 <html>
 	<head>
 		<title>Natural Language Processing and Chatterbots</title>
-		<p>By Adair Grant</p>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,7 +50,12 @@
 							<!-- Content -->
 
 								<article>
-	<h2>What does it do? </h2>
+									<header>
+										<h2>Autonomous Vehicles</h2>
+										<p>by Nathan Askew.</p>
+									</header>
+	
+									<h3>What does it do? </h3>
 
 									<h5>What is the state-of-the-art technology? </h5>
 
@@ -59,10 +63,10 @@
 
 									<p>•	Tokenisation – The first step of natural language processing, tokenisation cuts the sentence into smaller sections called ‘tokens’ and removes parts of the text that may cause confusion like punctuation. Although this step seems quite simple it can be confused by elaborate text such as hyphenated words.</p>
 
-									<img src="images/down_arrow.jpg" alt=”" width="10" height="13">
+									
 									<p>•	Stemming – This is the second step in NLP and removes the suffix from words to turn different forms of a word into one word. For example, the words running, runner, runs and ran could all be reduced to the single present form stem word of ‘run’. This process uses the Natural Language Toolkit or NLTK provided by Python. </p>
 
-																      <img src="images/down_arrow.jpg" alt=”" width="10" height="13">
+																      
 																      <p>•	Lemmatisation- Lemmatisation is the process or reducing the amount of words by grouping together different inflicted forms into a root word referred to called ‘Lemma’. Lemmatisation differs slightly to stemming in that it required detailed dictionaries in order to group words. Where stemming would group together gone and going into go, lemmatisation would also include words like went.</p>
 
 																      <p>•	POS tags- Pos tags assign a letter value to different grammatical terms such as, nouns, verbs and adjectives. </p>
@@ -98,7 +102,7 @@
 																      <p>One of the most useful development tools is the integration into a vast array of devices from smart assistants, to mobile phones and laptops, to fridges. Experts predict that the improvement of speech recognition technologies will be huge, and the development of these technologies come from use. </p>
 
 
-																      <h2>What Is the likely impact? </h2> 
+																      <h3>What Is the likely impact? </h3> 
 
 																      <h5>What is the potential impact of this development? </h5>
 
@@ -118,7 +122,7 @@
 The job of data scientist is currently the development of NLP technologies however it is possible that in the future the technology will become so advanced that human data scientist will become obsolete.  
   
 
-																      <h2>How will this affect you? </h5> 
+																      <h3>How will this affect you? </h3> 
 
 																      <h5>In your daily life how will this affect you? </h5>
 
