--- a/natural-language-processing-and-chatterbots.html
+++ b/natural-language-processing-and-chatterbots.html
@@ -51,15 +51,15 @@
 
 								<article>
 									<header>
-										<h2>Autonomous Vehicles</h2>
-										<p>by Nathan Askew.</p>
+										<h2>Natural Language Processing and Chatbots</h2>
+										<p>by Adair Grant.</p>
 									</header>
 	
 									<h3>What does it do? </h3>
 
 									<h5>What is the state-of-the-art technology? </h5>
 
-									<p>Natural language processing or NLP is the bridging between human language and computer language allowing computers to make sense of the complexities of what a person may say, and to respond with something a person could understand. There are 4 main types of NPL, sentimental analysis (an example of this is the like button and other expressions of emotions you will find on social media sights), speech recognition like Siri on the iPhone or google assistant devices and machine translation like language translation apps. The fourth type is chatbots. There are 6 steps in the development of natural language, these are:</p>
+									<p>Natural language processing or NLP is the bridging between human language and computer language allowing computers to make sense of the complexities of what a person may say, and to respond with something a person could understand. There are 4 main types of NLP, sentimental analysis (an example of this is the like button and other expressions of emotions you will find on social media sights), speech recognition like Siri on the iPhone or google assistant devices and machine translation like language translation apps. The fourth type is chatbots. There are 6 steps in the development of natural language, these are:</p>
 
 									<p>•	Tokenisation – The first step of natural language processing, tokenisation cuts the sentence into smaller sections called ‘tokens’ and removes parts of the text that may cause confusion like punctuation. Although this step seems quite simple it can be confused by elaborate text such as hyphenated words.</p>
 
@@ -76,7 +76,7 @@
 																      <p>•	Chunking- The final step of chunking allows for phrases to be grouped together when the meaning would be changed by the separation of the words. It is particularly useful with regards to people’s names and places, for example ‘South America’ has a different meaning to ‘South’, ‘America’.</p>
 
 
-																      <p>Chatbots as stated above is one of the 4 main uses of NPL. It can simulate regular conversation as if you were speaking to a person through a website or phone call. Essentially a chatbot will receive an input from a user and return an output or a response to the user’s request. To be effective a chatbot needs to be able to perform both these tasks and deliver useful information to the user. </p>
+																      <p>Chatbots as stated above is one of the 4 main uses of NLP. It can simulate regular conversation as if you were speaking to a person through a website or phone call. Essentially a chatbot will receive an input from a user and return an output or a response to the user’s request. To be effective a chatbot needs to be able to perform both these tasks and deliver useful information to the user. </p>
 
 
 																      <h5>What can be done now? </h5>
