--- a/group-reflection.html
+++ b/group-reflection.html
@@ -23,30 +23,22 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">IT Technologies</a>
 									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
-										<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="autonomous-vehicles.html">Autonomous Vehicles</a></li>
+										<li><a href="clouds-servers-services.html">Clouds, servers and services</a></li>
+										<li><a href="machine-learning.html">Machine Learning</a></li>
+										<li><a href="natural-language-processing-and-chatterbots.html">Natural Language Processing and Chatterbots</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li class="current"><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="team-profile.html">Team Profile</a></li>
+								<li><a href="ideal-jobs.html">Ideal Jobs</a></li>
+								<li><a href="tools.html">Tools</a></li>
+								<li><a href="it-work.html">IT Work</a></li>
+								<li><a href="it-project.html">IT Project</a></li>
+								<li><a href="group-reflection.html">Group Reflection</a></li>
 							</ul>
 						</nav>
 
