--- a/group-reflection.html
+++ b/group-reflection.html
@@ -54,28 +54,20 @@
 									<!-- Sidebar 1 -->
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
+											<h3>Adair Individual Reflection</h3>
+											<p>I was honestly really impressed with how our team worked together and we had a really fun and supportive dynamic. Everyone was very enthusiastic with regards to putting themselves forward for different tasks. I think we effectively used everybody’s strengths and collaboratively worked as a productive unit.</p>
+											<p>I studied the Natural Processing Language & Chatbots. I was also responsible for researching further the motivation of our IT project. I then programmed the IT technology I studied on GitHub and input a large part of the IT project into our website.</p>
+											<p>A small issue we at the start of the experienced was that we weren’t familiar with Microsoft teams and didn’t realise that we had to schedule a meeting and not just verbally organise so our very first meeting we didn’t have all team members present. We ironed out this issue pretty quickly and now I think we’re all more familiar with using teams.</p>
+											<p>I was surprised by the lack of conflict within the team. We all came together and were supportive of each other. I didn’t feel uncomfortable expressing my opinion asking for help when I needed it.</p>
+											<p>I really learnt to appreciate working as a team during this assignment, previously I’ve been a bit intimidated by team assignments, but this team provided a support network, and everyone did their part. In this instance many hands definitely made light work! </p>
 										</section>
 
 										<section>
-											<h3>Another Subheading</h3>
-											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
+											<h3>Dillon Individual Reflection</h3>
+											<p>“A group of individuals converging together as a team to achieve a common goal” is what the Oxford dictionary states is the definition of a Team, and that’s exactly how our team operated and communicated. Using each other's strengths and weaknesses to our advantage, great examples includes our first meeting where we decided to work at our own pace and have deadlines before each consecutive meeting thereafter, I believe this was extremely effective and efficient in being productive for Assignment 2’s Content.</p>
+											<p>When it came to collating that unexpurgated content and organising it into an acceptable format such as a Full working HTML website. Our group once again made it a derisory task, clearing our mind for Concise, applicable content which I believe clearly states our intentions for assignment 3, and showcases our strengths, technical and general skills.</p>
+											<p>Something that I found surprising was everyone's ability to quickly get to know one another's names and become acquainted, within no time we all knew each other names, and even without a face or even webcam (at first) in these difficult times, we faced no adversity when it came to working well as a group.</p>
+											<p>The COVID-19 Pandemic has caused us to all think about work differently, with particular attention to the IT sector, as modern-day technology is being utilised more than ever. It is my belief that this project is a fantastic way to introduce us to a world where technology may have to be used in these new inventive ways.  </p>
 										</section>
 
 								</div>
@@ -87,18 +79,17 @@
 
 										<article>
 											<header>
-												<h2>Two Sidebar</h2>
-												<p>Yup. Two sidebars at the same time.</p>
+												<h2>Group Reflection</h2>
 											</header>
 
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/group-reflection.jpg" alt="" /></span>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+											<h3>What Went Well?
+											<p>Our team connected well and were well organised from the start. We benefitted from a good mix of student that were quite new to the field of IT and those with a little more experience, meaning we had team members with a wealth of knowledge and that were able to assist with any difficulties on the technical side of things, but also some fresh out-looks at IT as an industry. All team members were eager to get involved with the work and people were assertive about what parts of the assignment they were interested in completing. At no point did we have any disagreements and the assignment. </p>
 
-											<h3>And Yet Another Subheading</h3>
+											<h3>What Could Have Been Improved?</h3>
+											<p>All in all, our group has performed brilliantly, we split up work evenly and got it all done. I think the few things that we possibly could have improved upon would have been to do a larger portion of the work earlier on as there was a fair bit still to do in the final few days. This worked out well as most of us were free in these final few days so we could get some of our best work done, however it did mean that processing our report into the GitHub site because a bit rushed. Thankfully we have been able to get it all finished on time and we are all very happy with how it came out. Lastly, I think we should have begun using webcams for video calls earlier on, as to begin with we just did voice calls. </p>
+												
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
 											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
 											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
@@ -106,10 +97,8 @@
 											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
 											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
 
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+											<h3>At Least One Thing That You Have Learned About Groups.</h3>
+											<p>As a group the thing I learned most about groups is group dynamics.  When we first formed, members were uncertain of where they fit in.  As the group progressed, people seemed to form and take on rolls.  An example would be, that one member would automatically take on the role of chairman and take the minutes.  This is not something we openly discussed.  I think it is also a matter of experience.  For some members in our group, this is their first year of Uni and for others it is their final year.   </p>
 										</article>
 
 								</div>
@@ -120,28 +109,22 @@
 									<!-- Sidebar 2 -->
 
 										<section>
-											<h3>Another Subheading</h3>
-											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
+											<h3>Thomas Individual Reflection</h3>
+											<p>In general, I would say that everything went well and there were no big hiccups.</p>
+											<p>Everyone was present at all of the meetings. And everyone contributed to both the conversations and the course work. Also everyone made their contribution punctually.</p>
+											<p>I think one thing we did well was delegation of tasks. Everyone took their own roles successfully.</p>
+											<p>One thing that could be improved is that at the beginning, we had audio only in our meetings. After speaking to Anthony Clapp, we have moved on to having video conferences. Also, there is something wrong with my computer internet. It doesn’t like conferences. To fix this, I now use my iPhone.</p>
+											<p>What surprised me is how cohesive we were as a team. It is interesting meeting a group online, especially when we are all locked down in our houses. There were some of us who this is our first year of uni and other member whom this is their final year.</p>
+											<p>I think I learned about group dynamics. At the start people are unsure of how the group is going to go. Then people take on their group identities. For instance, one member may seem to take on the role of chairman more./p>
 										</section>
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
+											<h3>Geoff's Individual Reflection</h3>
+											<p>I remembered clearly when it was the time to gather and create groups for the Assignment 2. At that time, I had no idea who I’m going to be with. Suddenly, I saw the chat box and realized that Nathan and Dillon were about to create a team. Without further thinking, I jumped on the chat box and said I want to team up with them.</p>
+											<p>The other thing that made me happy was there is Adair in the team, I knew Adair before and had a chat when it was the first time Anthony did a random group breakout. Surprisingly, I just knew that I am the only Asian in the team by the time the group is settled.</p>
+											<p>At first, I feel very nervous to be really honest because I’m afraid that I can’t understand clearly what my teammates speak since I have English as my second language not first. As a second language speaker I believe that there is a visible difference in the capability of speaking and understanding English between me and my teammates. Another concern is this might also affect my performance in the team.</p>
+											<p>As the time goes by, I adapt with the team and finally managed to complete the project. We did several meetings and did each of our tasks. Communication went really well between us all together and all of us is very active in replying if there is any problem with the project. I love the way this team supports each other, and I have experienced it.</p>
+											<p>When the A1 result came out, mine was not good at all and they gave me the support I need. They encouraged me to keep on going and said let’s make our best to bring my mark goes up. This makes me realize that I am not left out, they got my back. Each of us contributes well to the project, we happily divide the task and just keep on going. One thing to say to this team is they are the best.</p>
 										</section>
 
 								</div>
